--- a/Demand_Forecasting_Model.ipynb
+++ b/Demand_Forecasting_Model.ipynb
@@ -48,10 +48,10 @@
         "from google.colab import drive\n",
         "# read the data\n",
         "drive.mount('/content/drive/')\n",
-        "path = \"/content/drive/Shareddrives/Fashom Practicum/Inventory Prediction/All SKUs/\"\n",
+        "path = \"/content/drive/dataset\"\n",
         "\n",
         "# Small Training dataset (1000 data points)\n",
-        "df = pd.read_csv(f\"{path}ALL_SKU_Sorted.csv\")"
+        "df = pd.read_csv(f\"{path}data.csv\")"
       ],
       "metadata": {
         "colab": {
