--- a/Demand_Forecasting_Model.ipynb
+++ b/Demand_Forecasting_Model.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Demand Forecasting Model Documentation"
+        "# Demand Forecasting Model Code"
       ],
       "metadata": {
         "id": "bx-GOSOa9gPA"
